syntax= "proto3";

// The greeting service definition.
service HelloService {

  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloManyTimes (HelloRequest) returns (stream HelloReply) {}

  rpc SayHelloToAll (stream HelloRequest) returns (HelloReply) {}

  rpc SayHelloBidirectional (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
